--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -1,5 +1,6 @@
 ---
 import BaseHead from '@/components/BaseHead.astro';
+import ThemeToggle from '@/components/ThemeToggle.astro';
 ---
 
 <html lang="en">
@@ -7,6 +8,7 @@ import BaseHead from '@/components/BaseHead.astro';
     <BaseHead />
   </head>
   <body>
+    <ThemeToggle />
     <slot />
   </body>
 </html>
