--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -56,11 +56,16 @@ const totalEpisodes = posts.length;
                     format="webp"
                     quality={90}
                 />
-                <p class="m-0 max-w-[75%]">
-                    Join <a href="https://twitter.com/left_pad">Henry Zhu</a> for
-                    an off-the-cuff conversation between friends.
+                <p class="m-0 max-w-[80%] text-lg font-semibold">
+                    off-the-cuff conversations between friends
                 </p>
-                <p class="mt-0 text-[0.9rem]">
+                <p class="m-0 text-[0.9rem]">
+                    sacred in the ordinary
+                </p>
+                <p class="m-0 text-[0.9rem]">
+                    embodiment over abstraction
+                </p>
+                <p class="mt-3 m-0 text-[0.9rem]">
                     (read the backstory from{" "}
                     <a href="https://henryzoo.com/living-out-in-faith">Henry</a>
                     and{" "}
