--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -13,7 +13,7 @@ const {
   author = 'Henry Zhu, Nadia Asparouhova',
 } = Astro.props;
 
-const siteTitle = title === hisMetadata.title ? title : `${title} | ${hisMetadata.title}`;
+const siteTitle = title === hisMetadata.title ? title : `${title}`;
 const isMainPage = slug === '';
 ---
 
