center the transcript, make the toc more of an overlay on the side

--- a/src/components/Subscribe.astro
+++ b/src/components/Subscribe.astro
@@ -2,7 +2,7 @@
 import {hisMetadata} from "@/metadata.ts";
 ---
 
-<p>
+<p class="text-center mt-2">
   <a href={hisMetadata.apple} target="_blank" rel="noreferrer">
     Apple
   </a>{" "}
